@@ -1,3 +1,8 @@
+2008-01-08 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/gimv_dir_view.c, src/gimv_thumb_win.c: Fix some bugs of widgets
+	dragging feature on latest gtk-2.10 or later.
+
 2008-01-07 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/fileload.c:
